# rust-gui-chat-client

./: Cargo.toml  README.md
src/: app.rs  main.rs  message.rs  network.rs  utils.rs
