[package]
name = "rust-gui-chat-client"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0.142"
chrono = { version = "0.4.41", features = ["serde"] }
wasm-bindgen = { version = "0.2.100", optional = true }
